# cmake

./: CMakeCache.txt  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/src/: main.cpp
sdl2/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
sdl2/include/: SDL_config.h
